<resources>
    <string name="app_name">MobiFixer</string>
    <string name="app_logo">App Logo</string>
    <string name="phone_servicing_manager">Phone Servicing Manager</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already Have an Account?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="name">Name</string>
    <string name="login_with_google">Login with Google</string>
    <string name="button">Button</string>
    <string name="logout">Logout</string>
    <string name="go_to_main_activity">Go to Main Activity</string>
    <string name="enter_name">Enter Name\n</string>
    <string name="search_by_phone">Search by Phone</string>
    <string name="sort_deliveries">Sort Deliveries</string>
    <string name="welcome_to_mobifixer">Welcome to MobiFixer</string>
    <string name="dashboard_screen">Dashboard Screen</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="services">Services</string>
    <string name="profile">Profile</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="delete_customer">Delete Customer</string>
    <string name="all_customers">All Customers</string>
    <string name="customer_id_auto_generated">Customer ID: AUTO-GENERATED</string>
    <string name="customer_name">Customer Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="device_model">Device Model</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="save_customer">Save Customer</string>
    <string name="select_delivery_date">Select Delivery Date</string>
    <string name="select_date">Select Date</string>
    <string name="id">ID</string>
    <string name="phone">Phone</string>
    <string name="device">Device</string>
    <string name="search_customer">Search Customer</string>
    <string name="search_by_phone_number">Search by Phone Number</string>
    <string name="search">Search</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="customer_details_will_appear_here">Customer details will appear here.</string>
    <string name="no_customer_found">No customer found with this phone number.</string>
    <string name="sort_by_delivery_date">Sort by Delivery Date</string>
    <string name="delete">Delete</string>
</resources>