<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_screen"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/goToSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_settings"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_add_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_customer"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_edit_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_customer"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_delete_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_customer"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_all_customers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_customers"
        android:layout_marginTop="20dp"/>


</LinearLayout>
