<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/tv_customer_id"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/id"/>

    <TextView
        android:id="@+id/tv_customer_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/tv_customer_phone"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/phone"/>

    <TextView
        android:id="@+id/tv_customer_device"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/device"/>

    <TextView
        android:id="@+id/tv_customer_delivery"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/delivery_date"/>
</LinearLayout>
