<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#808080"
        android:textColorHighlight="#FFEB3B"/>


    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#808080"
        android:textColorHighlight="#FFEB3B"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/signupRedirectText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="#0277BD"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/googleLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_google"/>
</LinearLayout>
